# nautilus-open-any-terminal

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  Update.md  default.nix  pyproject.toml  renovate.json  setup.py
.github/actions/checkout-and-setup-python/: action.yml
.github/linters/: .python-lint  codespellrc
.github/workflows/: build-deb.yml  linter.yml  python-package.yml  python-publish.yml  pythonpackage.yml
debian/: caja-extension-any-terminal.postinst  caja-extension-any-terminal.postrm  changelog  control  copyright  postinst  postrm  rules
nautilus_open_any_terminal/: __init__.py  nautilus_open_any_terminal.py  open_any_terminal_extension.py
nautilus_open_any_terminal/locale/: Makefile  ar.po  bn.po  cs.po  da.po  de.po  el.po  es.po  fa.po  fi.po  fr.po  gl.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  ko.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  sw.po  template.pot  th.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
nautilus_open_any_terminal/locale/br/LC_MESSAGES/: nautilus-open-any-terminal.po
nautilus_open_any_terminal/locale/es/LC_MESSAGES/: nautilus-open-any-terminal.po
nautilus_open_any_terminal/locale/fr/LC_MESSAGES/: nautilus-open-any-terminal.po
nautilus_open_any_terminal/locale/pl/LC_MESSAGES/: nautilus-open-any-terminal.po
nautilus_open_any_terminal/locale/pt_BR/LC_MESSAGES/: nautilus-open-any-terminal.po
nautilus_open_any_terminal/locale/tr/LC_MESSAGES/: nautilus-open-any-terminal.po
nautilus_open_any_terminal/schemas/: com.github.stunkymonkey.nautilus-open-any-terminal.gschema.xml
tools/: update-extension-system.sh  update-extension-user.sh  update-extension-user.sh.sh  update-extension.sh
